salesforce/force-app/main/default/objects/Agent_Write__c/Agent_Write__c.object-meta.xml
<CustomObject>
    <description>Provenance for agent writes: what the agent wrote or proposed, from which inputs, and who confirmed it.</description>
    <label>Agent Write</label>
    <nameField>
        <displayFormat>AW-{00000}</displayFormat>
        <label>Agent Write</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agent Writes</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>