salesforce/force-app/main/default/objects/Agent_Write__c/fields/Agent__c.field-meta.xml
<CustomField>
    <fullName>Agent__c</fullName>
    <description>Writer label of the agent, for example agent:renewal</description>
    <label>Agent</label>
    <type>Text</type>
    <length>80</length>
</CustomField>