salesforce/force-app/main/default/objects/Agent_Write__c/fields/Confirmed_By__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_By__c</fullName>
    <description>The person who confirmed this value; until then it reads as advisory</description>
    <label>Confirmed By</label>
    <type>Lookup</type>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>User</referenceTo>
    <relationshipName>Confirmed_Agent_Writes</relationshipName>
</CustomField>