salesforce/force-app/main/default/objects/Agent_Write__c/fields/Evidence__c.field-meta.xml
<CustomField>
    <fullName>Evidence__c</fullName>
    <description>Outside evidence for a value filled from outside the CRM</description>
    <label>Evidence</label>
    <type>Text</type>
    <length>255</length>
</CustomField>