salesforce/force-app/main/default/objects/Agent_Write__c/fields/Field__c.field-meta.xml
<CustomField>
    <fullName>Field__c</fullName>
    <description>Object and field API name, for example Opportunity.Amount</description>
    <label>Field</label>
    <type>Text</type>
    <length>255</length>
</CustomField>