salesforce/force-app/main/default/objects/Agent_Write__c/fields/Inputs__c.field-meta.xml
<CustomField>
    <fullName>Inputs__c</fullName>
    <description>JSON list of the record and field each input was read from</description>
    <label>Inputs</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>