salesforce/force-app/main/default/objects/Agent_Write__c/fields/Previous_Value__c.field-meta.xml
<CustomField>
    <fullName>Previous_Value__c</fullName>
    <description>For drafts: the field's value when the draft was proposed. Approval refuses the draft if the field has changed since.</description>
    <label>Previous Value</label>
    <type>Text</type>
    <length>255</length>
</CustomField>