salesforce/force-app/main/default/objects/Agent_Write__c/fields/Reasons__c.field-meta.xml
<CustomField>
    <fullName>Reasons__c</fullName>
    <description>The gate's reasons for a draft or a hold</description>
    <label>Reasons</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>