salesforce/force-app/main/default/objects/Agent_Write__c/fields/Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Record_Id__c</fullName>
    <description>The record the agent wrote or proposed to write</description>
    <externalId>true</externalId>
    <label>Record Id</label>
    <type>Text</type>
    <length>18</length>
</CustomField>