salesforce/force-app/main/default/objects/Agent_Write__c/fields/Run_Id__c.field-meta.xml
<CustomField>
    <fullName>Run_Id__c</fullName>
    <description>The request that made the write</description>
    <label>Run Id</label>
    <type>Text</type>
    <length>80</length>
</CustomField>