salesforce/force-app/main/default/objects/Agent_Write__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Written: the gate let it through; Draft: waiting for a person; Approved: a person approved the draft; Held: the gate asked instead</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Written</fullName>
            </value>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Held</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>