salesforce/force-app/main/default/objects/Agent_Write__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <description>The value written or proposed</description>
    <label>Value</label>
    <type>Text</type>
    <length>255</length>
</CustomField>