salesforce/force-app/main/default/objects/Agent_Write__c/fields/Written_At__c.field-meta.xml
<CustomField>
    <fullName>Written_At__c</fullName>
    <label>Written At</label>
    <type>DateTime</type>
</CustomField>